<resources>
    <string name="app_name">Study Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="register_button">REGISTER</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="hint_text">Name</string>
    <string name="hint_text_surname">Surname</string>
    <string name="hint_text_username">Username</string>
    <string name="hint_text_password">Password</string>
    <string name="submit">Submit</string>
    <string name="create_list">Create Subjects List For Selected Date</string>
    <string name="create_task_list">Click to Create a Task</string>
    <string name="task_list">TASK LIST SUBJECTS</string>
    <string name="image_view">Image of the subject</string>
    <string name="save">Save Tasks</string>
    <string name="search">INTERNET</string>
    <string name="timer">Timer</string>
    <string name="subject_name">Subject name</string>
    <string name="date">Date</string>
    <string name="select">Select a date to create subjects list</string>
    <string name="done">Back</string>
    <string name="explain">Select subjects on the left. Click selected subjects on the right to open subject\'s task list.</string>
    <string name="saved_lists">Search tasks</string>
    <string name="enter_date">Click on desired date</string>
    <string name="subject_list">LIST OF SUBJECTS</string>


</resources>
